tests/paczka1/small_fuzzy/66753655.err
Error in line 4: l0v1D5UGF2J A537 89,4
Error in line 11: rf8C A537 28,0
